--- a/style.css
+++ b/style.css
@@ -9,3 +9,14 @@ span {
     background-position: center;
 
 }
+.orders {
+    background-image: url(images/charles-deluvio-pLjFwX5VR-M-unsplash.jpg);
+    height: 100vh;
+    background-size: cover;
+}
+
+.deliveries {
+    background-image: url(images/sahal-hameed-Nq9KlQTTEbQ-unsplash.jpg);
+    height: 100vh;
+    background-size: cover;
+}
